# neonsvm

./: .clang-format  CMakeLists.txt  README.md
include/neonsvm/: import.hpp  neonsvm.hpp  svr.hpp
include/neonsvm/classification/: base.hpp  binary.hpp  ovo.hpp  ovr.hpp
include/neonsvm/decision_function/: base.hpp  linear.hpp  polynomial.hpp  rbf.hpp  sigmoid.hpp
include/neonsvm/regression/: svr.hpp
src/neonsvm/: import.cpp  svr.cpp  utility.hpp
src/neonsvm/classification/: base.cpp  binary.cpp  ovo.cpp  ovr.cpp
src/neonsvm/decision_function/: base.cpp  linear.cpp  polynomial.cpp  rbf.cpp  sigmoid.cpp
src/neonsvm/regression/: svr.cpp
test/: main.cpp
test/models/classification/: svc_2_linear.yaml  svc_5_linear_ovr.yaml  svc_5_poly_ovo.yaml  svc_5_sigmoid_ovo.yaml
test/models/regression/: svr_rbf.yaml  svr_sigmoid.yaml
tests/models/classification/: svc_2_poly.yaml  svc_2_rbf.yaml  svc_2_sigmoid.yaml  svc_5_linear_ovo.yaml  svc_5_rbf_ovo.yaml
tests/models/regression/: svr_linear.yaml  svr_poly.yaml
